kubernets/yamls/apisix/ingress-at-helper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.tls":"true"},"name":"argus-ingress","namespace":"default"},"spec":{"rules":[{"host":"api.example.com","http":{"paths":[{"backend":{"service":{"name":"argus-orchestrator","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["api.example.com"],"secr [...]
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: argus-ingress
  namespace: default
spec:
  rules:
  - host: api.example.com
    http:
      paths:
      - backend:
          service:
            name: apisix-gateway-bridge
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.example.com
    secretName: api-argus-tls
