kubernets/yamls/apisix/ingress-auth-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/strip-path":"true"},"name":"auth-public","namespace":"default"},"spec":{"ingressClassName":"kong","rules":[{"http":{"paths":[{"backend":{"service":{"name":"my-orchestrator-argus-orchestrator","port":{"number":8080}}},"path":"/auth","pathType":"Prefix"}]}}]}}
  name: auth-public
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-orchestrator-argus-orchestrator
            port:
              number: 8080
        path: /auth
        pathType: Prefix
