kubernets/yamls/apisix/ingress-httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/plugins: api-key-auth
    konghq.com/strip-path: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/plugins":"api-key-auth","konghq.com/strip-path":"true"},"name":"httpbin-ingress","namespace":"default"},"spec":{"ingressClassName":"kong","rules":[{"http":{"paths":[{"backend":{"service":{"name":"httpbin","port":{"number":80}}},"path":"/secure-api","pathType":"Prefix"}]}}]}}
  name: httpbin-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /secure-api
        pathType: Prefix
