kubernets/yamls/apisix/ingress-my-orchestrator-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/plugins: google-oidc,session-plugin
    konghq.com/strip-path: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/plugins":"google-oidc,session-plugin","konghq.com/strip-path":"true"},"name":"my-orchestrator-app","namespace":"default"},"spec":{"ingressClassName":"kong","rules":[{"http":{"paths":[{"backend":{"service":{"name":"my-orchestrator-argus-orchestrator","port":{"number":8080}}},"path":"/my-orchestrator","pathType":"Prefix"}]}}]}}
  name: my-orchestrator-app
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-orchestrator-argus-orchestrator
            port:
              number: 8080
        path: /my-orchestrator
        pathType: Prefix
